Update Sinfonicos e schedule

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -954,31 +954,6 @@
                           </div>
                         </div>
                       </div>
-                      <div class="panel panel-default">
-                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="speaker-3" />
-                        </div>
-                        <div class="panel-heading">
-                          <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <!--<div style="float: right"><i class="fa fa-map-marker"></i> </div>--></div>
-                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item23" class="collapsed">
-                              iTGROW 
-                              <div class="pull-right fa fa-angle-up"></div>
-                              <div class="pull-right fa fa-angle-down"></div>
-                              <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Workshop</div>
-                            </a>
-                          </div>
-                        </div>
-                        <div id="item23" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            <article>
-                              <p><b>Duration: </b>2h</p>
-                              <p>details soon...</p>
-                              <!--<p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
-                            </article>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                   <div class="tab-pane fade" id="DayTwo-1">
@@ -1253,30 +1228,6 @@
                               <p><b>Duration: </b>1h30</p>
                               <p>details soon...</p>
                               <p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Creator of Counter-Strike</strong></a></p>
-                            </article>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="panel panel-default">
-                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="speaker-3" />
-                        </div>
-                        <div class="panel-heading">
-                          <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <!--<div style="float: right"><i class="fa fa-map-marker"></i> </div>--></div>
-                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemSeventeen" class="collapsed">
-                              iTGROW 
-                              <div class="pull-right fa fa-angle-up"></div>
-                              <div class="pull-right fa fa-angle-down"></div>
-                            </a>
-                          </div>
-                        </div>
-                        <div id="itemSeventeen" class="panel-collapse collapse">
-                          <div class="panel-body">
-                            <article>
-                              <p><b>Duration: </b>2h</p>
-                              <p>details soon...</p>
-                              <!--<p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
                             </article>
                           </div>
                         </div>
@@ -1619,7 +1570,31 @@
                           </div>
                         </div>
                       </div>
-
+                      <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="speaker-3" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i>Room V1.15 </div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item23" class="collapsed">
+                              iTGROW 
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                              <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Workshop</div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="item23" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p><b>Duration: </b>2h</p>
+                              <p>details soon...</p>
+                              <!--<p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
+                            </article>
+                          </div>
+                        </div>
+                      </div>
 
                     </div>
                   </div>
@@ -1906,6 +1881,30 @@
                               <p><b>Duration: </b>1h30</p>
                               <p>Details soon...</p>
                               <!--<p class="author"><a href="speaker/ScottChacon.html"><strong><i class="fa fa-user"></i> Scott Chacon - Co-founder, CIO and R&D VP of Github</strong></a></p>-->
+                            </article>
+                          </div>
+                        </div>
+                      </div>
+                                            <div class="panel panel-default">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
+                          <img src="assets/img/speaker/ws.png" class="img-responsive img-circle" alt="speaker-3" />
+                        </div>
+                        <div class="panel-heading">
+                          <div class="panel-title">
+                            <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i>Room V1.15</div></div>
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemSeventeen" class="collapsed">
+                              iTGROW 
+                              <div class="pull-right fa fa-angle-up"></div>
+                              <div class="pull-right fa fa-angle-down"></div>
+                            </a>
+                          </div>
+                        </div>
+                        <div id="itemSeventeen" class="panel-collapse collapse">
+                          <div class="panel-body">
+                            <article>
+                              <p><b>Duration: </b>2h</p>
+                              <p>details soon...</p>
+                              <!--<p class="author"><a href="speaker/MihnLe.html"><strong><i class="fa fa-user"></i> Mihn "Gooseman" Le - Software Engineering Manager at PayPal and card.io Co-Founder</strong></a></p>-->
                             </article>
                           </div>
                         </div>
