--- a/index.html
+++ b/index.html
@@ -431,12 +431,6 @@
           <a href="mailto:manuel.alves@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
         <div class="all-15 medium-30 small-50 tiny-50">
-          <h6>Frederico Carvalho</h6>
-          <img src="img/team/frederico_carvalho.jpg" onmouseover="this.src='img/team/frederico_carvalho_sinfo.jpg'" onmouseout="this.src='img/team/frederico_carvalho.jpg'" alt="">
-          <br>
-          <a href="mailto:frederico.carvalho@sinfo.org"><i class="fa fa-envelope"></i></a>
-        </div>
-        <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Cláudia Filipe</h6>
           <img src="img/team/claudia_filipe.png" onmouseover="this.src='img/team/claudia_filipe_sinfo.jpg'" onmouseout="this.src='img/team/claudia_filipe.png'" alt="">
           <br>
@@ -454,29 +448,23 @@
           <br>
           <a href="mailto:mariana.paulo@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Diogo Nicolau</h6>
           <img src="img/team/diogo_nicolau.jpg" onmouseover="this.src='img/team/diogo_nicolau_sinfo.jpg'" onmouseout="this.src='img/team/diogo_nicolau.jpg'" alt="">
           <br>
           <a href="mailto:diogo.nicolau@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Francisco Dias</h6>
           <img src="img/team/francisco_dias.jpg" onmouseover="this.src='img/team/francisco_dias_sinfo.jpg'" onmouseout="this.src='img/team/francisco_dias.jpg'" alt="">
           <br>
           <a href="mailto:francisco.dias@sinfo.org"><i class="fa fa-envelope"></i></a>
-        </div>
-        <div class="all-15 medium-30 small-50 tiny-50">
-          <h6>Gonçalo Sena</h6>
-          <img src="img/team/goncalo_sena.jpg" onmouseover="this.src='img/team/goncalo_sena_sinfo.jpg'" onmouseout="this.src='img/team/goncalo_sena.jpg'" alt="">
-          <br>
-          <a href="mailto:goncalo.sena@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>João Barata</h6>
@@ -496,13 +484,7 @@
           <br>
           <a href="mailto:pedro.saraiva@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-        <div class="all-15 medium-30 small-50 tiny-50">
+          <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Rafael Santos</h6>
           <img src="img/team/rafael_santos.jpg" onmouseover="this.src='img/team/rafael_santos_sinfo.jpg'" onmouseout="this.src='img/team/rafael_santos.jpg'" alt="">
           <br>
@@ -513,7 +495,13 @@
           <img src="img/team/rodrigo_martins.jpg" onmouseover="this.src='img/team/rodrigo_martins_sinfo.jpg'" onmouseout="this.src='img/team/rodrigo_martins.jpg'" alt="">
           <br>
           <a href="mailto:rodrigo.martins@sinfo.org"><i class="fa fa-envelope"></i></a>
+        </div>        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
         </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Adriana Domingos</h6>
           <img src="img/team/adriana_domingos.jpg" onmouseover="this.src='img/team/adriana_domingos.jpg'" onmouseout="this.src='img/team/adriana_domingos.jpg'" alt="">
@@ -538,12 +526,6 @@
           <br>
           <a href="mailto:mafalda.magro@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Yuliya Plotka</h6>
           <img src="img/team/yuliya_plotka.jpg" onmouseover="this.src='img/team/yuliya_plotka.jpg'" onmouseout="this.src='img/team/yuliya_plotka.jpg'" alt="">
@@ -556,6 +538,14 @@
           <br>
           <a href="mailto:andre.domingues@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+        
+        
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Diogo Lopes</h6>
           <img src="img/team/diogo_lopes.jpg" onmouseover="this.src='img/team/diogo_lopes.jpg'" onmouseout="this.src='img/team/diogo_lopes.jpg'" alt="">
@@ -580,12 +570,6 @@
           <br>
           <a href="mailto:joao.antunes@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>João Chitas</h6>
           <img src="img/team/joao_chitas.jpg" onmouseover="this.src='img/team/joao_chitas.jpg'" onmouseout="this.src='img/team/joao_chitas.jpg'" alt="">
@@ -598,6 +582,13 @@
           <br>
           <a href="mailto:nuno.pires@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Tiago Ramos</h6>
           <img src="img/team/tiago_ramos.png" onmouseover="this.src='img/team/tiago_ramos.png'" onmouseout="this.src='img/team/tiago_ramos.png'" alt="">
@@ -622,12 +613,6 @@
           <br>
           <a href="mailto:duarte.paiva@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-        <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
-      	 <div class="all-5 hide-medium hide-small hide-tiny">
-          <!-- spacer -->
-        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Miguel Cordeiro</h6>
           <img src="img/team/miguel_cordeiro.png" onmouseover="this.src='img/team/miguel_cordeiro.png'" onmouseout="this.src='img/team/miguel_cordeiro.png'" alt="">
@@ -640,6 +625,10 @@
           <br>
           <a href="mailto:ines.urbano@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
+
       </div>
     </div>
 
