Update partners and Adam Baldwin

--- a/22/partners.html
+++ b/22/partners.html
@@ -132,6 +132,8 @@
             <li><a href="http://www.itgrow.pt/pt/inicio" target="_blank"><img src="assets/img/sponsor/iTGROW.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" alt="sponsor-1" /></a></li>
             <li><a href="https://mandrill.com/" target="_blank"><img src="assets/img/sponsor/Mandrill.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            <li><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/link.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
@@ -141,6 +143,7 @@
             <li><a href="https://www.youtube.com/user/TheOpinionPT?sub_confirmation=1" target="_blank"><img src="assets/img/sponsor/The Opinion.jpg" alt="sponsor-1"  /></a></li>
             <li><a href="http://www.canalsuperior.pt/" target="_blank"><img src="assets/img/sponsor/CanalSuperior.png" alt="sponsor-1"  /></a></li>
             <li><a href="http://wintech.pt/" target="_blank"><img src="assets/img/sponsor/wintech.png" alt="sponsor-1"  /></a></li>
+            <li><a href="http://exameinformatica.sapo.pt/" target="_blank"><img src="assets/img/sponsor/exameinfo.png" alt="sponsor-1"  /></a></li>
           </ul>
         </div>
       </div>
