--- a/22/speaker/AdamBaldwin.html
+++ b/22/speaker/AdamBaldwin.html
@@ -72,10 +72,13 @@
             </section>
             <p class="big">Chief Security Officer at &yet and Team Lead at ^lift security</p>
             <h8> <b>Bio</b></h8>
-            <p class="big">Bio soon...</p>
+            <p class="big">Adam Baldwin is the Chief Security Officer at &yet and the Team Lead at ^lift security where he helps developers secure all the web things! He is the Founder of the Node Security Project & talks about node security non-stop. In his free time Adam enjoys doing basically the exact same stuff he does for work, also raising chickens, and spending as much time as possible with his wife and 2 children.</p>
             <h8> <b>Talk</b></h8>
             <p><span class="fa fa-calendar"> 25 February </span> <span class="fa fa-clock-o"> 17h20</span> <span class="fa fa-map-marker"> Civil Engineering Building's Congress Center</span></p>
-            <p class="big">Title and details soon..</p>
+            <p class="big"><b><i>"Breaking into Security"</i></b></p>
+             <p class="big">Twenty years ago, at the age of 15, Adam escaped his life on the farm by breaking into a small town BBS, an event which changed his life forever. He will share his story of getting into security – a career touching many areas of technology, as well as what makes the security industry. </p>
+            <p class="big"> Finally, as to not disappoint those who want some insider know-how, Adam will share recent security research that he hopes will inspire your inner hacker.</p>
+            
           </article>
         </section>
    
