added Alberto Lopez bio and other stuff

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -137,7 +137,7 @@
                         <div id="item2" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>details soon...</p>
+                              <p>About: http://www.cbtalents.com/ </p>
                             </article>
                           </div>
                         </div>
@@ -528,7 +528,7 @@
                         <div id="itemTwentyFour" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>details soon...</p>
+                              <p>About: http://www.cbtalents.com/ </p>
                             </article>
                           </div>
                         </div>
