--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Alberto López</h6>
-          <!--<a href="22/speaker/PeterSunde.html">--><img src="img/speakers/AlbertoL.png" onmouseover="this.src='img/speakers/back/AlbertoL.png'" onmouseout="this.src='img/speakers/AlbertoL.png'" alt=""><!--</a>-->
+          <a href="22/speaker/AlbertoLopez.html"><img src="img/speakers/AlbertoL.png" onmouseover="this.src='img/speakers/back/AlbertoL.png'" onmouseout="this.src='img/speakers/AlbertoL.png'" alt=""></a>
           <p class="note">Developer Evangelist at Braintree_Dev. A Paypal Company</p>
         </div>
       </div>
