--- a/22/index.html
+++ b/22/index.html
@@ -122,7 +122,7 @@
         <div class="row">
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="counter animated hiding" data-animation="fadeInDown" data-delay="0">
-              <div class="stat"><span class="value" data-from="0" data-to="10">13</span></div>
+              <div class="stat"><span class="value" data-from="0" data-to="13">13</span></div>
               <div class="stat-info">speakers</div>
             </div>
           </div>
@@ -292,13 +292,13 @@
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <!--<a href="speaker/EythorBender.html">-->
+              <a href="speaker/AlbertoLopez.html">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/AlbertoL.png" class="img-responsive img-circle" alt="Alberto López" />
                 </div>
                 <div class="name">Alberto López</div>
                 <div class="sub">Braintree_Dev</div>
-             <!-- </a>-->
+             </a>
             </div>
           </div>
         </section>
