--- a/22/schedule.html
+++ b/22/schedule.html
@@ -342,7 +342,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.14</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item11" class="collapsed">
-                              Firefox OS
+                              Rust
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                               <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Workshop</div>
@@ -613,7 +613,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i> Room V1.14</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemFourteen" class="collapsed">
-                              Firefox OS
+                              Rust
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -1578,7 +1578,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 19h00 <div style="float: right"><i class="fa fa-map-marker"></i>Room V1.15 </div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#item23" class="collapsed">
-                              iTGROW 
+                              <i>"Critical Systems Development"</i> - iTGROW 
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                               <div style="color: black; font-size: 15px; font-weight: 500; padding-right: 2px; float: right; padding-top: 10px;">Workshop</div>
@@ -2574,6 +2574,17 @@
     <footer id="footer" style="text-align: center;" >
       © 2015 &nbsp;&nbsp; All rights reserved.        
     </footer>
+
+     <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-49601832-1', 'sinfo.org');
+        ga('send', 'pageview');
+
+      </script>
 
     <!--[if lt IE 9]>
         <script type="text/javascript" src="assets/js/jquery-1.11.0.min.js?ver=1"></script>
