--- a/22/partners.html
+++ b/22/partners.html
@@ -133,7 +133,7 @@
             <li><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" alt="sponsor-1" /></a></li>
             <li><a href="https://mandrill.com/" target="_blank"><img src="assets/img/sponsor/Mandrill.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/link.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
-            
+
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
@@ -151,6 +151,18 @@
     <footer id="footer" style="text-align: center;" >
       © 2015 &nbsp;&nbsp; All rights reserved.
     </footer>
+
+     <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-49601832-1', 'sinfo.org');
+        ga('send', 'pageview');
+
+      </script>
+      
     <!-- End Price Section -->
 <!--[if lt IE 9]>
         <script type="text/javascript" src="assets/js/jquery-1.11.0.min.js?ver=1"></script>
