added startup rush schedule

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -2192,7 +2192,7 @@
                         <div id="item44" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p><b>Durantion: </b>1h30</p>
+                              <p><b>Duration: </b>1h30</p>
                               <p>Details soon...</p>
                               <!--<p class="author"><a href="speaker/EythorBender.html"><strong><i class="fa fa-user"></i> Eythor Bender - Co-Founder & CEO of UNYQ</strong></a></p>-->
                             </article>
@@ -2217,7 +2217,7 @@
                         <div id="item45" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p><b>Durantion: </b>1h30</p>
+                              <p><b>Duration: </b>1h30</p>
                               <p>Details soon...</p>
                               <!--<p class="author"><a href="speaker/EythorBender.html"><strong><i class="fa fa-user"></i> Eythor Bender - Co-Founder & CEO of UNYQ</strong></a></p>-->
                             </article>
@@ -2463,7 +2463,7 @@
                         <div id="itemTwenty" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p><b>Durantion: </b>1h30</p>
+                              <p><b>Duration: </b>1h30</p>
                               <p>Details soon...</p>
                               <!--<p class="author"><a href="speaker/EythorBender.html"><strong><i class="fa fa-user"></i> Eythor Bender - Co-Founder & CEO of UNYQ</strong></a></p>-->
                             </article>
@@ -2487,7 +2487,7 @@
                         <div id="itemTwentyOne" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p><b>Durantion: </b>1h30</p>
+                              <p><b>Duration: </b>1h30</p>
                               <p>Details soon...</p>
                               <!--<p class="author"><a href="speaker/EythorBender.html"><strong><i class="fa fa-user"></i> Eythor Bender - Co-Founder & CEO of UNYQ</strong></a></p>-->
                             </article>
