--- a/22/contacts.html
+++ b/22/contacts.html
@@ -101,7 +101,7 @@
             <li style="width:40%"><a href="https://github.com/" target="_blank"><img src="assets/img/sponsor/GitHub_Logo.png" alt="sponsor-1" /></a></li>
           </ul> 
         </div>
-        <div class="sub-title">Platinum Partners</div>
+        <div class="sub-title" style="margin-bottom:0px">Platinum Partners</div>
         <div class="row">
           <ul class="list-inline">
             <li style="width:31%"><a href="http://www.gatewit.com/pt/" target="_blank"><img src="assets/img/sponsor/gatewit.png" alt="sponsor-1" /></a></li>
@@ -110,6 +110,13 @@
             <li style="width:31%"><a href="http://www2.deloitte.com/pt/pt.html" target="_blank"><img src="assets/img/sponsor/Deloite.png" alt="sponsor-1" /></a></li>
             <li style="width:31%"><a href="http://www.kpmg.com/PT/PT/Paginas/default.aspx" target="_blank"><img src="assets/img/sponsor/KPMG.png" alt="sponsor-1" /></a></li>
           </ul> 
+        </div> 
+        <div class="sub-title" style="margin-top: -40px;">Partners</div>
+        <div class="row">
+          <ul class="list-inline">
+            <li><a href="http://www.faber-ventures.com/" target="_blank"><img src="assets/img/sponsor/faber.png" alt="sponsor-1" /></a></li>
+            <li><a href="http://sapo.miniclip.com/games/pt/" target="_blank"><img src="assets/img/sponsor/Miniclip.png" alt="sponsor-1" /></a></li>
+          </ul>
         </div> 
       </div>
       <div class="row">
