Updated schedule and speakers

--- a/22/index.html
+++ b/22/index.html
@@ -159,7 +159,7 @@
         <section class="row">
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <a href="speaker/HelderPinto.html">
+              <a href="https://app.sinfo.org/speakers/helder-pinto">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/HelderPinto.jpg" class="img-responsive img-circle" alt="Hélder Pinto" />
                 </div>
@@ -170,7 +170,7 @@
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-              <a href="speaker/ScottChacon.html">
+              <a href="https://app.sinfo.org/speakers/scott-chacon">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/ScottChacon.jpg" class="img-responsive img-circle" alt="Scott Chacpn" />
                 </div>
@@ -179,10 +179,32 @@
               </a>
             </div>
           </div>
+           <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
+              <a href="https://app.sinfo.org/speakers/feross-aboukhadijeh">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/Feross.png" class="img-responsive img-circle" alt="Feross Aboukhadijeh" />
+                </div>
+                <div class="name">Feross Aboukhadijeh</div>
+                <div class="sub">Yahoo!</div>
+             </a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
+              <a href="https://app.sinfo.org/speakers/josh-bleecher-snyder">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/snyder.jpg" class="img-responsive img-circle" alt="Josh Bleecher Snyder" />
+                </div>
+                <div class="name">Josh Bleecher Snyder</div>
+                <div class="sub">PayPal & card.io</div>
+              </a>
+            </div>
+          </div>
           <div class="clearfix visible-xs"></div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
-              <a href="speaker/MihnLe.html">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
+              <a href="https://app.sinfo.org/speakers/minh-le">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/gooseman.png" class="img-responsive img-circle" alt="Mihn Le" />
                 </div>
@@ -192,63 +214,20 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
-              <a href="speaker/CarlosFonseca.html">
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/CFonseca.jpg" class="img-responsive img-circle" alt="Carlos Fonseca" />
-                </div>
-                <div class="name">Carlos Fonseca</div>
-                <div class="sub">IBM Research</div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <!--<a href="speaker/EythorBender.html">-->
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/Feross.png" class="img-responsive img-circle" alt="Feross Aboukhadijeh" />
-                </div>
-                <div class="name">Feross Aboukhadijeh</div>
-                <div class="sub">Yahoo!</div>
-             <!-- </a>-->
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-              <a href="speaker/AdamBaldwin.html">
+              <a href="https://app.sinfo.org/speakers/phil-calcado">
                 <div class="img-wrapper">
-                  <img src="assets/img/speaker/baldwin.png" class="img-responsive img-circle" alt="Adam Baldwin" />
+                  <img src="assets/img/speaker/phil.png" class="img-responsive img-circle" alt="Phil Calçado" />
                 </div>
-                <div class="name">Adam Baldwin</div>
-                <div class="sub">&yet & ^lift</div>
+                <div class="name">Phil Calçado</div>
+                <div class="sub">SoundCloud</div>
               </a>
             </div>
           </div>
+                 
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
-              <a href="speaker/JoshSnyder.html">
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/snyder.jpg" class="img-responsive img-circle" alt="Josh Bleecher Snyder" />
-                </div>
-                <div class="name">Josh Bleecher Snyder</div>
-                <div class="sub">PayPal & card.io</div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
-              <a href="speaker/BethanyAndres-Beck.html">
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/bethany.jpg" class="img-responsive img-circle" alt="Bethany Andres-Beck" />
-                </div>
-                <div class="name">Bethany Andres-Beck</div>
-                <div class="sub">Twitter</div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <a href="speaker/SteveFrancia.html">
+              <a href="https://app.sinfo.org/speakers/steve-francia">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/francia.jpg" class="img-responsive img-circle" alt="Steve Francia" />
                 </div>
@@ -258,30 +237,19 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
-              <a href="speaker/SteveHuffman.html">
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/huffman.jpg" class="img-responsive img-circle" alt="Steve Huffman" />
-                </div>
-                <div class="name">Steve Huffman</div>
-                <div class="sub">Reddit & Hipmunk</div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
-              <a href="speaker/PhilCalcado.html">
-                <div class="img-wrapper">
-                  <img src="assets/img/speaker/phil.png" class="img-responsive img-circle" alt="Phil Calçado" />
-                </div>
-                <div class="name">Phil Calçado</div>
-                <div class="sub">SoundCloud</div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
-              <a href="speaker/PeterSunde.html">
+              <a href="https://app.sinfo.org/speakers/adam-baldwin">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/baldwin.png" class="img-responsive img-circle" alt="Adam Baldwin" />
+                </div>
+                <div class="name">Adam Baldwin</div>
+                <div class="sub">&yet & ^lift</div>
+              </a>
+            </div>
+          </div>  
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
+              <a href="https://app.sinfo.org/speakers/peter-sunde">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/PeterSunde.png" class="img-responsive img-circle" alt="Peter Sunde" />
                 </div>
@@ -291,14 +259,47 @@
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
-            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <a href="speaker/AlbertoLopez.html">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="500">
+              <a href="https://app.sinfo.org/speakers/alberto-lopez-martin">
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/AlbertoL.png" class="img-responsive img-circle" alt="Alberto López" />
                 </div>
                 <div class="name">Alberto López</div>
                 <div class="sub">Braintree_Dev</div>
              </a>
+            </div>
+          </div>
+           <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1000">
+              <a href="https://app.sinfo.org/speakers/carlos-fonseca">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/CFonseca.jpg" class="img-responsive img-circle" alt="Carlos Fonseca" />
+                </div>
+                <div class="name">Carlos Fonseca</div>
+                <div class="sub">IBM Research</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="1500">
+              <a href="https://app.sinfo.org/speakers/steve-huffman">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/huffman.jpg" class="img-responsive img-circle" alt="Steve Huffman" />
+                </div>
+                <div class="name">Steve Huffman</div>
+                <div class="sub">Reddit & Hipmunk</div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
+              <a href="https://app.sinfo.org/speakers/bethany-andresbeck">
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/bethany.jpg" class="img-responsive img-circle" alt="Bethany Andres-Beck" />
+                </div>
+                <div class="name">Bethany Andres-Beck</div>
+                <div class="sub">Twitter</div>
+              </a>
             </div>
           </div>
         </section>
