Updated right GoYouth link

--- a/22/partners.html
+++ b/22/partners.html
@@ -133,7 +133,7 @@
             <li><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" alt="sponsor-1" /></a></li>
             <li><a href="https://mandrill.com/" target="_blank"><img src="assets/img/sponsor/Mandrill.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
             <li><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/link.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
-            <li><a href="http://www.link.pt/" target="_blank"><img src="assets/img/sponsor/goYouth.jpg" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
+            <li><a href="http://www.goyouthconf.com/" target="_blank"><img src="assets/img/sponsor/goYouth.jpg" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
